fix alignment of footer

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ body {
   font-weight: lighter;
 }
 
+#footer {
+  background-color: #4b4d4e !important;
+}
+
 .navbar {
   background-color: #5d5f60 !important;
 }
